feat(v2): Initial rework for version 2
